# secured-accounts-lab

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: __init__.py  app.py  config.py  errors.py  forms.py  models.py  queries.py  views.py
src/app/templates/: _fields.html  base.html  errors.html  footer.html  header.html  login.html  register.html
src/tests/: test_auth_user.py
